--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="authService.isLoggedIn()">
-  <div class="container">
-    <a class="navbar-brand" routerLink="/tasks">{{ title }}</a>
-    <div class="navbar-nav">
-      <a class="nav-link" routerLink="/tasks" routerLinkActive="active">Tasks</a>
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="d-flex align-items-center">
+      <a class="navbar-brand me-4" routerLink="/tasks">{{ title }}</a>
+      <div class="navbar-nav">
+        <a class="nav-link" routerLink="/tasks" routerLinkActive="active">Tasks</a>
+      </div>
     </div>
-    <div class="navbar-nav ms-auto">
+    <div class="navbar-nav">
       <a class="nav-link" (click)="authService.logout()">Logout</a>
     </div>
   </div>
