--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -4,6 +4,7 @@
       <a class="navbar-brand me-4" routerLink="/tasks">{{ title }}</a>
       <div class="navbar-nav">
         <a class="nav-link" routerLink="/tasks" routerLinkActive="active">Tasks</a>
+        <a class="nav-link" routerLink="/timer" routerLinkActive="active">Timer</a>
       </div>
     </div>
     <div class="navbar-nav">
